--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,16 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
+    
+    <Button
+        android:id="@+id/btn_open"
+        android:textSize="24sp"
+        android:background="@drawable/ic_next_button"
+        android:text="Open Second"
+        android:layout_margin="64dp"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
 
 
     <FrameLayout
