--- a/app/src/main/res/layout/activity_second.xml
+++ b/app/src/main/res/layout/activity_second.xml
@@ -26,6 +26,23 @@
           android:layout_width="match_parent"
           android:layout_height="match_parent">
 
+         <FrameLayout
+             android:layout_width="24dp"
+             android:layout_height="24dp"
+             app:layout_constraintEnd_toEndOf="parent"
+             android:layout_margin="16dp"
+             app:layout_constraintTop_toTopOf="parent">
+
+            <ImageView
+                android:id="@+id/heart"
+                android:layout_width="22.9dp"
+                android:src="@drawable/ic_heart"
+                android:layout_gravity="center"
+                android:layout_height="20.23dp"
+                />
+
+         </FrameLayout>
+
          <com.google.android.material.button.MaterialButton
              android:id="@+id/categori"
              app:cornerRadius="10dp"
